monitoria/mac323/4-2-33/grades/Adriano-Santin_190818_assignsubmission_file_WordDAG_Adriano.txt

COMPILATION ERROR

CORREÇÃO AUTOMÁTICA
Quantidade de Testes | Veredito
0 | OK
0 | Erro de Montagem (o grafo dessa query não pode ser montado)
0 | Tempo de Execução Excedido
0 | Resposta Errada
0 | Erro de Execução
CORREÇÃO MANUAL
[*0] Não fez o que foi proposto no EP. Montar o grafo é parecido demais com o ep passado.

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/4-2-33/tester/checker/checker' is up to date.
CorretorDoVictaum.java:85: error: cannot find symbol
            args.ex.PrintDag();
                   ^
  symbol:   method PrintDag()
  location: variable ex of type WordDAG
CorretorDoVictaum.java:97: error: cannot find symbol
            args.ex.PrintPathCount(args.a, args.b);
                   ^
  symbol:   method PrintPathCount(String,String)
  location: variable ex of type WordDAG
Note: Digraph.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
Second Compile Method
CorretorDoVictaum.java:85: error: cannot find symbol
            args.ex.PrintDag();
                   ^
  symbol:   method PrintDag()
  location: variable ex of type WordDAG
CorretorDoVictaum.java:97: error: cannot find symbol
            args.ex.PrintPathCount(args.a, args.b);
                   ^
  symbol:   method PrintPathCount(String,String)
  location: variable ex of type WordDAG
Note: Digraph.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
